# NetSecGame

./: .dockerignore  .gitignore  .gitmodules  404.html  CITATION.cff  Dockerfile  Dockerfile_CYST  GNN_reinforce_parametrized.py  Learn_1.py  MANIFEST.in  README.md  README_pypi.md  basic_agent.py  comparison.py  coordinator.conf  coordinator.py  coordinator_v2.py  coordinator_v3.py  double_q_agent.py  environment.py  environment_v2.py  game_components.py  gnn_REINFORCE_agent.py  index.html  mkdocs.yml  naive_q_agent.py  network_security_game.py  objects.inv  plot_generation.py  pyproject.toml  q_agent.py  q_values.pickle  random_agent.py  requirements.txt  scenario_configuration.py  schema.pbtxt  setup.py  smaller_scenario_configuration.py  test.yaml  test_q_values.pickle  (+2 more)
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  docker-publish.yml  python-checks.yml
.github/workflows /: python-checks.yml
AIDojoCoordinator/: coordinator.py  game_components.py  global_defender.py  netsecenv_conf.yaml  netsecenv_conf_new_ips_1.yaml  netsecenv_conf_new_ips_2.yaml  netsecenv_conf_new_ips_3.yaml  netsecenv_conf_new_ips_4.yaml  netsecenv_conf_new_ips_5.yaml  netsecevn_conf_cyst_integration.yaml  utep_benchmark_conf.yaml
AIDojoCoordinator/coordinator/: config_parser.py  coordinator.py
AIDojoCoordinator/docs/: Components.md  Coordinator.md
AIDojoCoordinator/scenarios/: one_net.py  scenario_configuration.py  scenario_configuration_new_IPs_1.py  scenario_configuration_new_IPs_2.py  scenario_configuration_new_IPs_3.py  scenario_configuration_new_IPs_4.py  scenario_configuration_new_IPs_5.py  test_scenario_configuration.py  three_net_scenario.py  tiny_scenario_configuration.py  two_nets.py  two_nets_tiny.py
AIDojoCoordinator/utils/: aidojo_log_colorizer.py  compute_win_rate_from_log.py  gamaplay_graphs.py  log_parser.py  plot_rewards.py  trajectory_analysis.py  utils.py
AIDojoCoordinator/worlds/: CYSTCoordinator.py  ExperimentalNSGCoordinator.py  NSEGameCoordinator.py  NSGRealWorldCoordinator.py  WhiteBoxNSGCoordinator.py  cyst_config.json  init_cyst.sh
NetSecGame/: __init__.py  base_agent.py  game_components.py  index.html
NetSecGame/coordinator/: config_parser.py  coordinator.py  global_defender.py
NetSecGame/docs/: Components.md
NetSecGame/utils/: gamaplay_graphs.py  trajectory_analysis.py  utils.py
WhiteBoxNetSecGame/: index.html
agent_server/: index.html
agents/double_q_learning/: double_q_agent.py  netsecenv-task.yaml  netsecenv-tests_04.yaml
agents/gnn_reinforce/: GNN_reinforce_parametrized.py  gnn_REINFORCE_agent.py  gnn_REINFORCE_params.py  netsecenv-task.yaml  schema.pbtxt
agents/gnn_reinforce_parametrized/: GNN_reinforce_parametrized.py  netsecenv-task.yaml
agents/interactive/: intaractive_agent.py  interactive_agent.py  netsecenv-task.conf  netsecenv-task.yaml  web_interface.py
architecture/: index.html
base_agent/: index.html
config_parser/: index.html
configuration/: index.html
configuration_manager/: index.html
coordinator/: coordinator-conf.yaml  coordinator.conf  coordinator.py
docs/: Actions.md  Architecture.md  Components.md  Coordinator.md  NetSecGame.md  Trajectory_analysis.md  WhiteBoxNetSecGame.md  agent_server.md  architecture.md  base_agent.md  config_parser.md  configuration.md  configuration_manager.md  game_components.md  game_coordinator.md  getting_started.md  global_defender.md  index.md  trajectory_recorder.md  utils.md  worlds.md
env/: NetSecGame.py  aidojo_world.py  game_components.py  global_defender.py  netsecenv_conf.yaml  netsecenv_conf_realworld.yaml  netsecevn_conf_cyst_integration.yaml  network_security_game.py
example-scenario-configurations/: smaller_scenario_configuration.py
examples/: example_task_configuration.yaml
game_components/: index.html
game_coordinator/: index.html
getting_started/: index.html
global_defender/: index.html
gnn_reinforce_agent/: gnn_REINFORCE_agent.py  schema.pbtxt
netsecgame/: __init__.py  base_agent.py  game_components.py
notebooks/: paper_actions_plot.rmd  paper_figures.ipynb  paper_return_win_rate_full.ipynb  paper_return_win_rate_small.ipynb
scenarios/: scenario_configuration.py
tests/: OLD_test_actions.py  netsecenv-task-for-testing.yaml  netsecenv-task.yaml  run_all_tests.sh  test_actions.py  test_all_actions.py  test_components.py  test_coordinator.py  test_game_coordinator.py  test_global_defender.py  test_winning.py
trajectory_recorder/: index.html
utils/: action_plots.r  action_plots_readme.md  actions_parser.py  create_trajectory_from_log.py  export_import_mlflow_exp.py  gamaplay_graphs.py  index.html  log_parser.py  trajectory_analysis.py  utils.py
(+120 files in other folders)
