[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project]
name = "AIDojoGameCoordinator"
version = "0.1.0"
description = "A package for coordinating AI-driven network simulation games."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ondrej Lukas", email = "ondrej.lukas@aic.fel.cvut.cz" },
    { name = "Sebastian Garcia", email = "sebastian.garcia@agents.fel.cvut.cz" },
    { name = "Maria Rigaki", email = "maria.rigaki@aic.fel.cvut.cz" }
]
dependencies = [
    "aiohttp==3.11.8",
    "attrs==23.2.0",
    "beartype==0.19.0",
    "cachetools==5.5.0",
    "casefy==0.1.7",
    "cyst==0.3.4",
    "dictionaries==0.0.2",
    "Faker==23.2.1",
    "Jinja2==3.1.4",
    "jsonlines==4.0.0",
    "jsonpickle==3.3.0",
    "kaleido==0.2.1",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.1",
    "netaddr==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pyserde==0.21.0",
    "python-dateutil==2.8.2",
    "PyYAML==6.0.1",
    "redis==3.5.3",
    "requests==2.32.3",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "tenacity==8.5.0",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]